--- a/backend/MinioConsumers/appsettings.Development.json
+++ b/backend/MinioConsumers/appsettings.Development.json
@@ -12,7 +12,16 @@
     "Timeout": 500,
     "Endpoint": "localhost:9000"
   },
-  "Redis": {
-    "Connection": "localhost:6379"
+  "RedisDbSettings": {
+    "Host": "localhost",
+    "Port": 8000,
+    "Password": "dfgmdlfgmdlfkmg"
+  },
+  "MongoDbSettings": {
+    "Host": "localhost",
+    "Port": 27018,
+    "User": "admin",
+    "Password": "admin",
+    "DatabaseName": "carsharing"
   }
 }
