--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -6,6 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  "FrontendHost": {
+    "Main": "http://localhost:3000",
+    "Admin": "http://localhost:3001"
+  },
+
   "MinioS3": {
     "AccessKey": "",
     "SecretKey": "",
