--- a/backend/MinioConsumers/appsettings.Development.json
+++ b/backend/MinioConsumers/appsettings.Development.json
@@ -14,14 +14,14 @@
   },
   "RedisDbSettings": {
     "Host": "localhost",
-    "Port": 8000,
-    "Password": "dfgmdlfgmdlfkmg"
+    "Port": 6379,
+    "Password": "!_password_redis"
   },
   "MongoDbSettings": {
     "Host": "localhost",
-    "Port": 27018,
-    "User": "admin",
-    "Password": "admin",
+    "Port": 27017,
+    "User": "carsharing",
+    "Password": "jhbdkfbgkrtAAjh206",
     "DatabaseName": "carsharing"
   }
 }
