made mongo and redis standalone apps, changed connection url

--- a/backend/MinioConsumers/appsettings.Development.json
+++ b/backend/MinioConsumers/appsettings.Development.json
@@ -13,15 +13,10 @@
     "Endpoint": "localhost:9000"
   },
   "RedisDbSettings": {
-    "Host": "localhost",
-    "Port": 8000,
-    "Password": "dfgmdlfgmdlfkmg"
+    "ConnectionUrl": "redis://localhost:6379/"
   },
   "MongoDbSettings": {
-    "Host": "localhost",
-    "Port": 27018,
-    "User": "admin",
-    "Password": "admin",
+    "ConnectionUrl": "mongodb://localhost:27018/",
     "DatabaseName": "carsharing"
   }
 }
