--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -18,15 +18,10 @@
     "Endpoint": ""
   },
   "RedisDbSettings": {
-    "Host": "",
-    "Port": 0,
-    "Password": ""
+    "ConnectionUrl": ""
   },
   "MongoDbSettings": {
-    "Host": "",
-    "Port": 0,
-    "User": "",
-    "Password": "",
+    "ConnectionUrl": "",
     "DatabaseName": ""
   }
 }
