--- a/backend/MinioConsumers/MinioConsumers.csproj
+++ b/backend/MinioConsumers/MinioConsumers.csproj
@@ -72,6 +72,7 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="12.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.14" />
       <PackageReference Include="Minio" Version="6.0.1" />
       <PackageReference Include="MongoDB.Driver" Version="2.22.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
