--- a/backend/MinioConsumers/MinioConsumers.csproj
+++ b/backend/MinioConsumers/MinioConsumers.csproj
@@ -85,4 +85,8 @@
       <ProjectReference Include="..\Core\Shared\Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\OccasionAttachment\InputModels\" />
+    </ItemGroup>
+
 </Project>
