--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -28,5 +28,10 @@
     "User": "",
     "Password": "",
     "DatabaseName": ""
+  },
+  "Jwt": {
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "Key": "MyVeryUniqueKey22222234"
   }
 }
