Added Occasion feature and background services
* Added Occasion model

* drafts

* Completed occasion feature

* Made multiple file links in metadata

* Created some occassion s3 service handlers

* Added controller and capability to download file

* Fixed saving

* Added operation status controller

* Added operation status controller

* Added Authorization

* Added OccasionConsumer

* Added background services

* Fixed compile errors

--- a/backend/MinioConsumers/MinioConsumers.csproj
+++ b/backend/MinioConsumers/MinioConsumers.csproj
@@ -86,4 +86,8 @@
       <ProjectReference Include="..\Core\Shared\Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\OccasionAttachment\InputModels\" />
+    </ItemGroup>
+
 </Project>
