--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -23,5 +23,10 @@
   "MongoDbSettings": {
     "ConnectionUrl": "",
     "DatabaseName": ""
+  },
+  "Jwt": {
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "Key": "MyVeryUniqueKey22222234"
   }
 }
