Updated compose settings

--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -18,7 +18,9 @@
     "Endpoint": ""
   },
   "RedisDbSettings": {
-    "ConnectionUrl": ""
+    "ConnectionUrl": "",
+    "Host": "",
+    "Port": ""
   },
   "MongoDbSettings": {
     "ConnectionUrl": "",
