--- a/compose.yaml
+++ b/compose.yaml
@@ -117,6 +117,8 @@ services:
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
       - ASPNETCORE_Kestrel__Certificates__Default__Password=${KestrelCertifPass}
       - RedisDbSettings__ConnectionUrl=tmdb:6379
+      - RedisDbSettings__Host=tmdb
+      - RedisDbSettings__Port=6379
       - MongoDbSettings__ConnectionUrl=mongodb://pmdb:27017/
       - MongoDbSettings__DatabaseName=carsharing
     links:
