--- a/backend/Infrastructure/Clients/Clients.csproj
+++ b/backend/Infrastructure/Clients/Clients.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
