reverted s3 service setup

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -10,9 +10,14 @@
     }
   },
 
-  "FrontendHost": {
-    "Main": "http://localhost:3000",
-    "Admin": "http://localhost:3001"
+  "KnownHosts": {
+    "FrontendHosts": {
+      "Main": "http://localhost:3000",
+      "Admin": "http://localhost:3001"
+    },
+    "BackendHosts": {
+      "FileService": "https://localhost:7015"
+    }
   },
 
   "AllowedHosts": "*",
@@ -30,8 +35,8 @@
   "RabbitMqConfig": {
     "Username": "",
     "Password": "",
-    "Hostname": "", 
-    "Port":""
+    "Hostname": "",
+    "Port": ""
   },
   "Jwt": {
     "Issuer": "Issuer",
