Fixed OccasionMessageDto and added migration

--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -12,19 +12,19 @@
   },
 
   "MinioS3": {
-    "AccessKey": "",
-    "SecretKey": "",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin",
     "Timeout": 500,
-    "Endpoint": ""
+    "Endpoint": "localhost:9000"
   },
   "RedisDbSettings": {
-    "ConnectionUrl": "",
-    "Host": "",
-    "Port": ""
+    "ConnectionUrl": "localhost:6379",
+    "Host": "localhost",
+    "Port": "6379"
   },
   "MongoDbSettings": {
-    "ConnectionUrl": "",
-    "DatabaseName": ""
+    "ConnectionUrl": "localhost:27018",
+    "DatabaseName": "carsharing"
   },
   "Jwt": {
     "Issuer": "Issuer",
