add separate occasion chat, changed occasion chat input form

--- a/compose.yaml
+++ b/compose.yaml
@@ -53,6 +53,7 @@ services:
       - REACT_APP_S3_API_URL=${S3_API_URL}
       - REACT_APP_WEBSITE_CHAT_URL=${WEBSITE_CHAT_URL}
       - REACT_LOCAL_HOST=${FRONT_MAIN}
+      - REACT_APP_WEBSITE_OCCASION_CHAT_URL=${WEBSITE_OCCASION_CHAT_URL}
     
     ports:
       - ${FRONT_WEBSITE_PORTS}
