--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ DB_PASSWORD=P@ssw0rd
 WEBSITE_API_URL="https://localhost:81/api"
 ADMIN_API_URL="https://localhost:81/api/admin"
 WEBSITE_CHAT_URL="https://localhost:81/chat"
+WEBSITE_OCCASION_CHAT_URL="https://localhost:81/occasion_chat"
 S3_API_URL="http://localhost:7125"
 
 BACK_ASP_ENV=Development
