--- a/backend/Core/Features/Features.csproj
+++ b/backend/Core/Features/Features.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\Clients\Clients.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Migrations\Migrations.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Persistence\Persistence.csproj" />
     <ProjectReference Include="..\Contracts\Contracts.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Shared\Shared.csproj" />
