added attachment to chat (prerelease)

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "",
+    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;",
     "LocalConnection": ""
   },
   "Logging": {
@@ -33,10 +33,10 @@
     }
   },
   "RabbitMqConfig": {
-    "Username": "",
-    "Password": "",
-    "Hostname": "",
-    "Port": ""
+    "Username": "chatConsumer",
+    "Password": "Passw0rd",
+    "Hostname": "rabbitmq",
+    "Port": "5672"
   },
   "Jwt": {
     "Issuer": "Issuer",
