--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -23,7 +23,7 @@
     "Port": "6379"
   },
   "MongoDbSettings": {
-    "ConnectionUrl": "localhost:27018",
+    "ConnectionUrl": "mongodb://localhost:27017",
     "DatabaseName": "carsharing"
   },
   "Jwt": {
