--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -14,7 +14,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -24,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"lint:js": "eslint src/**/*.js",
+    "lint:js": "eslint src/**/*.js",
     "lint": "npm run lint:js",
     "eslintWarnings": "eslint --max-warnings=0 src"
   },
