Сделал пару фичей

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -35,7 +35,7 @@
   "RabbitMqConfig": {
     "Username": "chatConsumer",
     "Password": "Passw0rd",
-    "Hostname": "rabbitmq",
+    "Hostname": "localhost",
     "Port": "5672"
   },
   "Jwt": {
