--- a/backend/ChatConsumers/appsettings.json
+++ b/backend/ChatConsumers/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;"
   },
   "RabbitMqConfig": {
     "Username": "",
