reverted some changes

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;",
+    "DefaultConnection": "",
     "LocalConnection": ""
   },
   "Logging": {
@@ -12,11 +12,11 @@
 
   "KnownHosts": {
     "FrontendHosts": {
-      "Main": "http://localhost:3000",
-      "Admin": "http://localhost:3001"
+      "Main": "",
+      "Admin": ""
     },
     "BackendHosts": {
-      "FileService": "https://localhost:7015"
+      "FileService": ""
     }
   },
 
@@ -33,10 +33,10 @@
     }
   },
   "RabbitMqConfig": {
-    "Username": "chatConsumer",
-    "Password": "Passw0rd",
-    "Hostname": "localhost",
-    "Port": "5672"
+    "Username": "",
+    "Password": "",
+    "Hostname": "",
+    "Port": ""
   },
   "Jwt": {
     "Issuer": "Issuer",
