Допилил сохранение истории. Сделал пару эндпоинтов для облегчения проверки

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "",
+    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;",
     "LocalConnection": ""
   },
   "Logging": {
@@ -12,11 +12,11 @@
 
   "KnownHosts": {
     "FrontendHosts": {
-      "Main": "",
-      "Admin": ""
+      "Main": "https://localhost:3000",
+      "Admin": "https://localhost:3001"
     },
     "BackendHosts": {
-      "FileService": ""
+      "FileService": "https://localhost:7015"
     }
   },
 
@@ -33,10 +33,10 @@
     }
   },
   "RabbitMqConfig": {
-    "Username": "",
-    "Password": "",
-    "Hostname": "",
-    "Port": ""
+    "Username": "chatConsumer",
+    "Password": "Passw0rd",
+    "Hostname": "localhost",
+    "Port": 5672
   },
   "Jwt": {
     "Issuer": "Issuer",
