--- a/backend/ChatConsumers/appsettings.json
+++ b/backend/ChatConsumers/appsettings.json
@@ -10,9 +10,9 @@
     "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;"
   },
   "RabbitMqConfig": {
-    "Username": "",
-    "Password": "",
-    "Hostname": "",
-    "Port": 0
+    "Username": "chatConsumer",
+    "Password": "Passw0rd",
+    "Hostname": "localhost",
+    "Port": 5672
   }
 }
