reverted frontend env

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ DB_USER=postgres
 DB_PASSWORD=P@ssw0rd
 
 WEBSITE_API_URL="https://localhost:81/api"
+WEBSITE_ORIGIN="https://localhost:81"
 ADMIN_API_URL="https://localhost:81/api/admin"
 WEBSITE_CHAT_URL="https://localhost:81/chat"
 WEBSITE_OCCASION_CHAT_URL="https://localhost:81/occasion_chat"
