--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -16,7 +16,7 @@
       "Admin": "https://localhost:3001"
     },
     "BackendHosts": {
-      "FileService": "https://localhost:7015"
+      "FileService": "http://localhost:5147"
     }
   },
 
