--- a/backend/ChatConsumers/appsettings.json
+++ b/backend/ChatConsumers/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;"
+    "DefaultConnection": ""
   },
   "RabbitMqConfig": {
-    "Username": "chatConsumer",
-    "Password": "Passw0rd",
-    "Hostname": "localhost",
-    "Port": 5672
+    "Username": "",
+    "Password": "",
+    "Hostname": "",
+    "Port": 0
   }
 }
