--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -12,19 +12,19 @@
   },
 
   "MinioS3": {
-    "AccessKey": "minioadmin",
-    "SecretKey": "minioadmin",
-    "Timeout": 500,
-    "Endpoint": "localhost:9000"
+    "AccessKey": "",
+    "SecretKey": "",
+    "Timeout": 0,
+    "Endpoint": ""
   },
   "RedisDbSettings": {
-    "ConnectionUrl": "localhost:6379",
-    "Host": "localhost",
-    "Port": "6379"
+    "ConnectionUrl": "",
+    "Host": "",
+    "Port": ""
   },
   "MongoDbSettings": {
-    "ConnectionUrl": "mongodb://localhost:27017",
-    "DatabaseName": "carsharing"
+    "ConnectionUrl": "",
+    "DatabaseName": ""
   },
   "Jwt": {
     "Issuer": "Issuer",
