--- a/frontend/admin/.eslintrc.json
+++ b/frontend/admin/.eslintrc.json
@@ -16,7 +16,8 @@
     "rules": {
 	    "react/react-in-jsx-scope": "off",
             "react/prop-types": "off",
-	    "react-hooks/exhaustive-deps": "off"
+	    "react-hooks/exhaustive-deps": "off",
+	    "react/no-unknown-property": ["error", { ignore: ["jsx"] }]
     },
     "settings": {
        "react": {
