--- a/.env
+++ b/.env
@@ -30,4 +30,6 @@ GOOGLE_APP_SECRET="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"
 FACEBOOK_APP_ID="170559199268168"
 FACEBOOK_APP_SECRET="9ebbfab5b06bc31f1aae9fe7174c93f4"
 
+RABBITMQ_USER="chatConsumer"
+RABBITMQ_PASSWORD="Passw0rd"
 
