--- a/compose.yaml
+++ b/compose.yaml
@@ -87,12 +87,14 @@ services:
   rabbitmq:
     container_name: rabbitmq
     image: rabbitmq:3-alpine
+    env_file:
+      - .env
     ports:
       - "15672:15672"
       - "5672:5672"
     environment:
-      RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
-      RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASSWORD}
 
   minio_carsharing:
     build:
