--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ DB_USER=postgres
 DB_PASSWORD=P@ssw0rd
 
 WEBSITE_API_URL="https://localhost:81/api"
+WEBSITE_ORIGIN="https://localhost:81"
 ADMIN_API_URL="https://localhost:81/api/admin"
 WEBSITE_CHAT_URL="https://localhost:81/chat"
 WEBSITE_OCCASION_CHAT_URL="https://localhost:81/occasion_chat"
@@ -29,4 +30,6 @@ GOOGLE_APP_SECRET="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"
 FACEBOOK_APP_ID="170559199268168"
 FACEBOOK_APP_SECRET="9ebbfab5b06bc31f1aae9fe7174c93f4"
 
+RABBITMQ_USER="chatConsumer"
+RABBITMQ_PASSWORD="Passw0rd"
 
