--- a/backend/Core/Contracts/Contracts.csproj
+++ b/backend/Core/Contracts/Contracts.csproj
@@ -5,5 +5,15 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
+        <PackageReference Include="Grpc.AspNetCore.Web" Version="2.61.0" />
+    </ItemGroup>
+    
+    <ItemGroup>
+        <Protobuf Include="Protos\Balance.proto" GrpcServices="Both" />
+        <Protobuf Include="Protos\User.proto" GrpcServices="Both" />
+    </ItemGroup>
     
 </Project>
