Added 2pc in booking, refactored some handlers

--- a/backend/Core/Shared/Shared.csproj
+++ b/backend/Core/Shared/Shared.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\" />
-    <Folder Include="MessagingContracts\" />
+    <Compile Remove="Dtos\**" />
+    <Compile Remove="MessagingContracts\**" />
+    <EmbeddedResource Remove="Dtos\**" />
+    <EmbeddedResource Remove="MessagingContracts\**" />
+    <None Remove="Dtos\**" />
+    <None Remove="MessagingContracts\**" />
   </ItemGroup>
 
   <ItemGroup>
