--- a/backend/BalanceService/BalanceService.csproj
+++ b/backend/BalanceService/BalanceService.csproj
@@ -8,6 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Application\**" />
+      <Content Remove="Application\**" />
+      <EmbeddedResource Remove="Application\**" />
+      <None Remove="Application\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="AutoMapper" Version="12.0.1" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.1" />
@@ -21,10 +28,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Core\Contracts\Contracts.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Application\" />
     </ItemGroup>
 
 </Project>
