Added comments to BalanceService, registering grpc clients, added lost modifications

--- a/backend/BalanceService/BalanceService.csproj
+++ b/backend/BalanceService/BalanceService.csproj
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Core\Contracts\Contracts.csproj" />
+      <ProjectReference Include="..\Infrastructure\Clients\Clients.csproj" />
     </ItemGroup>
 
 </Project>
