--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -16,7 +16,8 @@
       "Admin": "https://localhost:3001"
     },
     "BackendHosts": {
-      "FileService": "http://localhost:5147"
+      "FileService": "http://localhost:5147",
+      "BalanceMicroservice": "https://localhost:7242"
     }
   },
 
