--- a/frontend/admin/.eslintrc.json
+++ b/frontend/admin/.eslintrc.json
@@ -25,6 +25,7 @@
       ],
       "no-debugger": "warn",
       "react/react-in-jsx-scope": "off",
+      "react/no-unknown-property": "off",
       "react/prop-types": "off",
       "react-hooks/exhaustive-deps": "off",
       "import/no-unresolved": "off"
