--- a/backend/Core/Features/Features.csproj
+++ b/backend/Core/Features/Features.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Tariffs\Commands\" />
+    <Folder Include="Users\Commands\CreateUser\ValidationBehavior\" />
   </ItemGroup>
 
   <ItemGroup>
