--- a/backend/BalanceService/appsettings.json
+++ b/backend/BalanceService/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;"
+    "DefaultConnection": ""
   },
   "AllowedHosts": "*"
 }
