--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=P@ssw0rd;Server=localhost;Port=5432;Database=Carsharing;",
+    "DefaultConnection": "",
     "LocalConnection": ""
   },
   "Logging": {
@@ -12,12 +12,12 @@
 
   "KnownHosts": {
     "FrontendHosts": {
-      "Main": "https://localhost:3000",
-      "Admin": "https://localhost:3001"
+      "Main": "http://localhost:3000",
+      "Admin": "http://localhost:3001"
     },
     "BackendHosts": {
-      "FileService": "http://localhost:5147",
-      "BalanceMicroservice": "https://localhost:7242"
+      "FileService": "",
+      "BalanceMicroservice": ""
     }
   },
 
@@ -34,10 +34,10 @@
     }
   },
   "RabbitMqConfig": {
-    "Username": "chatConsumer",
-    "Password": "Passw0rd",
-    "Hostname": "localhost",
-    "Port": 5672
+    "Username": "",
+    "Password": "",
+    "Hostname": "",
+    "Port": 0
   },
   "Jwt": {
     "Issuer": "Issuer",
