--- a/backend/MinioConsumers/appsettings.json
+++ b/backend/MinioConsumers/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "FrontendHost": {
-    "Main": "http://localhost:3000",
-    "Admin": "http://localhost:3001"
+    "Main": "",
+    "Admin": ""
   },
 
   "MinioS3": {
