--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -21,23 +21,16 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.3.2 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
-  google_fonts: ^6.2.1
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   email_validator: ^2.1.17
   intl_phone_number_input: 0.7.1
+  provider: ^6.1.2
+  google_fonts: ^6.2.1
+  #date formatter
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
