--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   google_fonts: ^6.2.1
   #date formatter
   intl: ^0.19.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
