--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -24,13 +24,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
+
+  #inputs
   email_validator: ^2.1.17
-  intl_phone_number_input: 0.7.1
-  provider: ^6.1.2
-  google_fonts: ^6.2.1
-  #date formatter
+  intl_phone_number_input: 0.7.4
   intl: ^0.19.0
+
+  #provider and bloc
+  provider: ^6.1.2
+  bloc: ^8.0.0
+  bloc_concurrency: ^0.2.0
+  flutter_bloc: ^8.0.0
+  flutter_secure_storage: ^9.0.0
+  #style
+  cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  #transparent
   transparent_image: ^2.0.1
 
 dev_dependencies:
