--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -44,7 +44,10 @@ dependencies:
   #map
   yandex_mapkit: ^4.0.2
   geolocator: ^9.0.2
+  #di
   get_it: ^7.7.0
+  freezed: ^2.5.2
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +59,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
