Создал микросервис graphql

--- a/backend/GraphQL.API/appsettings.json
+++ b/backend/GraphQL.API/appsettings.json
@@ -27,8 +27,7 @@
   "RabbitMqConfig": {
     "Username": "k0c0w",
     "Password": "passw0rd",
-    "Hostname": "host.docker.internal",
+    "Hostname": "localhost",
     "Port": 5673
   }
 }
-
