--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ BACK_ASP_PORTS2="81:443"
 ASPNETCORE_URLS="https://+443;http://+80"
 ASPNETCORE_HTTPS_PORT="443"
 KestrelCertifPass=password12345
-DEFAULT_CONNECTION="User ID=postgres;Password=P@ssw0rd;Server=db;Port=5432;Database=Carsharing;"
+DEFAULT_CONNECTION="User ID=k0c0w;Password=P@ssw0rd;Server=host.docker.internal;Port=6543;Database=Carsharing;"
 PGADMIN_PORTS="5050:80"
 DB_PORTS="5432:5432"
 DB_USER=postgres
