fixed graphQL server scheme fetch error

--- a/backend/GraphQL.API/appsettings.json
+++ b/backend/GraphQL.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "User ID=k0c0w;Password=P@ssw0rd;Server=host.docker.internal;Port=6543;Database=Carsharing;"
+    "DefaultConnection" : "User ID=k0c0w;Password=P@ssw0rd;Server=localhost;Port=6543;Database=Carsharing;"
   },
   "Logging": {
     "LogLevel": {
