--- a/backend/Chat.Microservice/Chat/appsettings.json
+++ b/backend/Chat.Microservice/Chat/appsettings.json
@@ -10,5 +10,10 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
+  },
+  "Jwt": {
+    "Issuer": "Issuer",
+    "Audience": "Audience",
+    "Key": "MyVeryUniqueKey22222234"
   }
 }
