--- a/backend/Chat.Microservice/Core/Features/Features.csproj
+++ b/backend/Chat.Microservice/Core/Features/Features.csproj
@@ -11,7 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Core\Shared\Shared.csproj" />
+    <ProjectReference Include="..\..\..\Core\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Services.Abstractinos\Services.Abstractions\Services.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
