--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,14 @@
 version: '3.9'
 
 services:
+  envoy-proxy:
+    image: envoyproxy/envoy-dev:e4955aed5694f9935d674419dbb364e744f697b4
+    volumes:
+      - ./envoy.yaml:/etc/envoy/envoy.yaml
+    ports:
+      - "9901:9901"
+      - "8080:8080"
+
   balance_service:
     container_name: arch_balance_service
     build:
