--- a/backend/Chat.Microservice/Infrastructure/Persistence/Persistence.csproj
+++ b/backend/Chat.Microservice/Infrastructure/Persistence/Persistence.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\SharedLibs\Carsharing.Contracts\Carsharing.Contracts.csproj" />
     <ProjectReference Include="..\..\Core\Domain\Domain.csproj" />
     <ProjectReference Include="..\..\Core\Services.Abstractinos\Services.Abstractions\Services.Abstractions.csproj" />
     <ProjectReference Include="..\Migrations\Migrations.csproj" />
