--- a/backend/Chat.Microservice/Chat/Chat.csproj
+++ b/backend/Chat.Microservice/Chat/Chat.csproj
@@ -22,8 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\Shared\Shared.csproj" />
     <ProjectReference Include="..\..\SharedLibs\Carsharing.Contracts\Carsharing.Contracts.csproj" />
-    <ProjectReference Include="..\Core\Features\Features.csproj" />
     <ProjectReference Include="..\Core\Services.Abstractinos\Services.Abstractions\Services.Abstractions.csproj" />
     <ProjectReference Include="..\Infrastructure\Migrations\Migrations.csproj" />
     <ProjectReference Include="..\Infrastructure\Persistence\Persistence.csproj" />
