added grpc web clients, configured envoy, bug fixed server model mapping and data access bugs

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,7 @@ services:
       - "8080:8080"
 
   balance_service:
-    container_name: arch_balance_service
+    container_name: drive_balance_service
     build:
       context: ./backend
       dockerfile: BalanceServiceDockerfile
@@ -24,29 +24,32 @@ services:
 
     depends_on:
       - db
-
-  chat_history_saver:
+  
+  chat-microservice:
     build:
       context: ./backend
-      dockerfile: ChatConsumersDockerfile
-    container_name: arch_chatconsumer
+      dockerfile: Chat.Microservice/Chat/Dockerfile
+    container_name: drive_chat
     environment:
-      - ConnectionStrings__DefaultConnection=User ID=k0c0w;Password=P@ssw0rd;Server=host.docker.internal;Port=6543;Database=Carsharing;
-      - RabbitMqConfig__Username=k0c0w
-      - RabbitMqConfig__Password=passw0rd
-      - RabbitMqConfig__Hostname=host.docker.internal
-      - RabbitMqConfig__Port=5673
       - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
       - ASPNETCORE_Kestrel__Certificates__Default__Password=${KestrelCertifPass}
+      - RabbitMqConfig__Username=k0c0w
+      - RabbitMqConfig__Password=passw0rd
+      - RabbitMqConfig__Host=amqp://host.docker.internal:5673
+      - ConnectionStrings__DefaultConnection=User ID=k0c0w;Password=P@ssw0rd;Server=host.docker.internal;Port=6543;Database=Chat;
     depends_on:
-      - rabbitmq
       - db
-  
+      - rabbitmq
+      - envoy-proxy
+    ports:
+      - 7080:8080
+      - 7081:8081
+
   backend:
     build:
       context: ./backend
       dockerfile: CarsharingDockerfile
-    container_name: arch_backend
+    container_name: drive_backend
     environment:
       - KnownHosts__FrontendHosts__Main="http://localhost:3000"
       - KnownHosts__FrontendHosts__Admin="http://localhost:3001"
@@ -81,6 +84,7 @@ services:
       - REACT_APP_WEBSITE_CHAT_URL=https://localhost:443/chat
       - REACT_LOCAL_HOST="http://localhost:3000"
       - REACT_APP_WEBSITE_OCCASION_CHAT_URL=https://localhost:443/occasion_chat
+      - REACT_APP_REGULAR_CHAT_URL=http://localhost:8080
     ports:
       - 3000:3000
     depends_on:
@@ -97,6 +101,7 @@ services:
       - REACT_APP_OCCASION_CHAT_URL=https://localhost:443/occasion_chat
       - REACT_LOCAL_HOST="http:localhost:3001"
       - REACT_APP_S3_API_URL=http://localhost:7127
+      - REACT_APP_REGULAR_CHAT_URL=http://localhost:8080
     ports:
       - 3001:3000
     depends_on:
