--- a/frontend/website/.eslintrc.json
+++ b/frontend/website/.eslintrc.json
@@ -16,19 +16,14 @@
   "rules": {
       "arrow-spacing": "warn",
       "no-var": "warn",
-      "no-unused-vars": [
-          "error",
-          {
-              "varsIgnorePattern": "_",
-              "argsIgnorePattern": "_"
-          }
-      ],
+      "no-unused-vars": "off",
       "no-debugger": "warn",
       "react/react-in-jsx-scope": "off",
       "react/prop-types": "off",
       "react-hooks/exhaustive-deps": "off",
       "import/no-unresolved": "off",
-      "react/no-unknown-property": "off"
+      "react/no-unknown-property": "off",
+      "getter-return": "off"
   },
   "parserOptions": {
       "ecmaVersion": 2023
