--- a/frontend/website/package.json
+++ b/frontend/website/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "eslint-plugin-only-error": "^1.0.2",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
