--- a/mobileapp/pubspec.yaml
+++ b/mobileapp/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  protobuf: ^3.1.0
+  grpc: ^3.0.2
   #inputs
   email_validator: ^2.1.17
   intl_phone_number_input: 0.7.4
