fixed merge mistakes

--- a/backend/Carsharing/appsettings.json
+++ b/backend/Carsharing/appsettings.json
@@ -36,8 +36,7 @@
   "RabbitMqConfig": {
     "Username": "",
     "Password": "",
-    "Hostname": "",
-    "Port": 0
+    "Host": ""
   },
   "Jwt": {
     "Issuer": "Issuer",
