--- a/backend/GraphQL.API/appsettings.json
+++ b/backend/GraphQL.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "User ID=k0c0w;Password=P@ssw0rd;Server=localhost;Port=6543;Database=Carsharing;"
+    "DefaultConnection": "User ID=k0c0w;Password=P@ssw0rd;Server=localhost;Port=6543;Database=Carsharing;"
   },
   "Logging": {
     "LogLevel": {
@@ -27,7 +27,6 @@
   "RabbitMqConfig": {
     "Username": "k0c0w",
     "Password": "passw0rd",
-    "Hostname": "localhost",
-    "Port": 5673
+    "Host": "amqp://localhost:5673"
   }
 }
