--- a/backend/GraphQL.API/GraphQL.API.csproj
+++ b/backend/GraphQL.API/GraphQL.API.csproj
@@ -20,6 +20,7 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.15.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+		<PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
     </ItemGroup>
 
     <ItemGroup>
