--- a/backend/Core/Features/Features.csproj
+++ b/backend/Core/Features/Features.csproj
@@ -23,7 +23,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="FluentValidation" Version="11.8.0" />
-	<PackageReference Include="MassTransit.RabbitMQ" Version="8.1.1" />
+    <PackageReference Include="MassTransit.Abstractions" Version="8.2.2" />
   </ItemGroup>
 
 </Project>
